Updates to Wingtip app to prevent error screen
Updating the html template to fail gracefully if a tenant has been taken
offline

--- a/WTP Application Project Files/src/Events-TenantUserApp/Views/Home/Index.cshtml
+++ b/WTP Application Project Files/src/Events-TenantUserApp/Views/Home/Index.cshtml
@@ -57,14 +57,29 @@
                         {
                             foreach (var tenant in Model)
                             {
-                                <tr>
-                                    <th style="display: none;">
-                                        <a href="@Url.Action("Index", "Events", new {tenant = tenant.TenantName})" target="_blank">@tenant.VenueName </a>
-                                    </th>
-                                    <th>
-                                        <a href="@Url.Action("Index", "Events", new {tenant = tenant.TenantName})" target="_blank">@tenant.VenueName </a>
-                                    </th>
-                                </tr>
+                                if (tenant.VenueName != null)
+                                {
+                                    <tr>
+                                        <th style="display: none;">
+                                            <a href="@Url.Action("Index", "Events", new { tenant = tenant.TenantName })" target="_blank">@tenant.VenueName </a>
+                                        </th>
+                                        <th>
+                                            <a href="@Url.Action("Index", "Events", new { tenant = tenant.TenantName })" target="_blank">@tenant.VenueName </a>
+                                        </th>
+                                    </tr>
+                                }
+                                else
+                                {
+                                    <tr>
+                                        <th style="display: none;">
+                                            <a href="" target="_blank">@tenant.TenantName </a>
+                                        </th>
+                                        <th style="pointer-events: none; cursor: default">
+                                            <a href="" target="_blank">@tenant.TenantName (offline)</a>
+                                        </th>
+                                    </tr>
+
+                                }
                             }
                         }
                     }
