--- a/WTP Application Project Files/src/Events-TenantUserApp/Views/Shared/_EventsLayout.cshtml
+++ b/WTP Application Project Files/src/Events-TenantUserApp/Views/Shared/_EventsLayout.cshtml
@@ -46,13 +46,17 @@
 <!-- -------------------------------------------------------------------------------------------------------------------------- -->
 
 <header>
-    <div class="container">
+    <div class="container" style="margin-top:5px">
         <div class="col-xs-12">
             <div class="row">
                 <div class="col-xs-12">
                     <a href="/Home/Index">
-                        <img class="logo-image pull-left" src="~/images/ticketmaestro-logo.jpg" />
-                        <h1 id="venueName" class="logo-heading">@tenantConfig.VenueName</h1>
+                        <div class="col-xs-1" style="padding: 0;">
+                            <img class="logo-image pull-left" src="/images/ticketmaestro-logo.jpg">
+                        </div>
+                        <div class="col-xs-11" style="padding-left: 2px;">
+                            <h1 id="venueName" class="logo-heading">@tenantConfig.VenueName</h1>
+                        </div>                        
                     </a>
                 </div>
                 <div class="col-xs-1">
@@ -119,53 +123,30 @@
 <!-- -------------------------------------------------------------------------------------------------------------------------- -->
 <!-- Footer Section -->
 <!-- -------------------------------------------------------------------------------------------------------------------------- -->
-
-<footer>
-    <div class="btm-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="col-xs-6">
-                        <div>
-                            <img class="logo-image pull-left" src="~/images/ticketmaestro-logo.jpg" />
-                            <h1 id="venueName2" class="logo-heading"><span>@tenantConfig.VenueName</span></h1>
-                        </div>
-                    </div>
-                    <div class="col-xs-5 pull-right footer-menu">
-                        <div class="row">
-                            <div class="text-left">
-                                <a href=@Startup.DatabaseConfig.LearnHowFooterUrl target="_blank">@Localizer["LEARN HOW TO BUILD A SAAS APP ON SQL DATABASE"]</a>
-                            </div>
-                        </div>
-                        <div class="copyright col-xs-12 text-left" style="margin-right: 10px;">
-                            <p>
-                                @Localizer["tenant id:"] @tenantConfig.TenantId&nbsp; &nbsp; &nbsp;@Localizer["raw:"] @tenantConfig.TenantIdInString<br />
-                                @Localizer["server:"] @tenantConfig.DatabaseServerName <br />
-                                @Localizer["database:"] @tenantConfig.DatabaseName
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="col-xs-1">
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="btm-orange col-xs-4" style="width:auto;margin-top: 12px;">
-                            @Localizer["POWERED BY THE WINGTIP TICKETS PLATFORM"]
-                        </div>
-                    </div>
-                    <div class="col-xs-5 pull-right footer-menu">
-                        <div class="copyright col-xs-12 text-left" style="margin-right: 10px;">
-                            <p>
-                                @Localizer["Running on Azure SQL Database."] &copy; @DateTime.Now.Year @Localizer["Microsoft"]<br />
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<footer class="footer" style="width: 102%; margin-left: -8px; margin-bottom: 1px; min-height:215px">
+    <div class="footer-left-third">
+        <img class="logo-image pull-left" src="~/images/ticketmaestro-logo.jpg">
+        <div class="logo-heading"><span>@Localizer["Wingtip Tickets Platform"]</span></div>
+    </div>
+    <div class="footer-middle-third">
+        <div style="margin-bottom: 6%; display: inline-block">
+            <span class="about-header">@tenantConfig.VenueName</span>
         </div>
+        <div class="about-text" style="margin-left: 3%; max-width: 325px">
+            <p>@Localizer["Sample event listing and ticketing multi-tenant SaaS application built using Azure SQL Database"]</p>
+            <p>
+                <a href=@Startup.DatabaseConfig.LearnHowFooterUrl class="tutorial-link" target="_blank">@Localizer["Learn how to build a SaaS app on SQL database"]</a>
+            </p>
+            <p style="margin-top: 8%">&copy; @Localizer["Copyright"] @DateTime.Now.Year @Localizer["Microsoft"] </p>
+        </div>
+    </div>
+    <hr class="footer-divider" />
+    <div class="footer-right-third grow">
+        <span class="deployment-info-header">@Localizer["Deployment Info"]</span>
+        <p><b>@Localizer["Tenant id"]: </b>@(String.Format("{0}{1}","0x", tenantConfig.TenantIdInString)) (@tenantConfig.TenantId)</p>
+        <p><b>@Localizer["Tenant alias"]: </b>@tenantConfig.TenantAlias</p>
+        <p><b>@Localizer["Tenant server"]: </b>@tenantConfig.DatabaseServerName.Split('.')[0]</p>
+        <p><b>@Localizer["Tenant database"]: </b>@tenantConfig.DatabaseName</p>
     </div>
 </footer>
 
